--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit==1.3.1
+streamlit==1.16.0
 plotly==5.3.1
 pandas==1.1.3
 seaborn==0.9.0
 matplotlib==3.4.2
 statsmodels==0.12.2
 numpy==1.19.5
-pdfkit
-jinja2
-altair
-plotly.express
-base64
+pdfkit==1.0.0
+jinja2==3.1.2
+altair==4.2.0
+plotly.express==0.4.1
